--- a/esp_32_rele/data/index.html
+++ b/esp_32_rele/data/index.html
@@ -47,7 +47,7 @@ h1 {margin: 50px auto 30px;}
     loadValues(); 
     setValues();                   
   }
-  setTimeout( onBodyLoad, 5000 );
+  setInterval( onBodyLoad, 10000 );
 </script>
     </head>
     <body onload="onBodyLoad()">
