--- a/esp_32_rele/data/index.html
+++ b/esp_32_rele/data/index.html
@@ -35,7 +35,7 @@ h1 {margin: 50px auto 30px;}
           }
         }
       };
-      xh.open("GET", "/api", true);
+      xh.open("GET", "/api/data", true);
       xh.send(null);
     };
   function setValues() {
