--- a/esp_32_rele/data/config.html
+++ b/esp_32_rele/data/config.html
@@ -8,7 +8,8 @@
         if (xh.readyState == 4){
           if(xh.status == 200) {
             var res = JSON.parse(xh.responseText);
-            esp32time = res.time;
+            var t = res.time;
+            esp32time = t.hour + ":" + t.minute + ":" + t.second + " " + t.day + "-" + t.month + "-" + t.year
             setValues();
           }
         }
@@ -16,21 +17,13 @@
       xh.open("GET", "http://localhost:3000/api/config", true);
       xh.send(null);
     };
+    
   function putValues(){
       var data = {};
-data.year = 2019;
-data.month  = 8;
-var json = JSON.stringify(data);
+      data.year = 2019;
+      data.month  = 8;
+      var json = JSON.stringify(data);
       var xh = new XMLHttpRequest();
-      xh.onreadystatechange = function(){
-        if (xh.readyState == 4){
-          if(xh.status == 200) {
-            var res = JSON.parse(xh.responseText);
-            esp32time = res.time;
-            setValues();
-          }
-        }
-      };
       xh.open("PUT", "http://localhost:3000/api/config", true);
       xh.setRequestHeader('Content-type','application/json; charset=utf-8');
       xh.onload = function () {
@@ -43,6 +36,7 @@ var json = JSON.stringify(data);
      }
      xh.send(json);
   };
+  
   function setValues() {
     document.getElementById("esp32time").innerText=esp32time;
   }
