--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     channelKeys.push({
       channelNumber: 855025, name: 'Rekuperace', key: 'K3M0RRW38L1UYBF8',
       fieldList: [
-        { field: 1, axis: 'A', type: 'spline', step: '' },
+        { field: 1, axis: 'T', type: 'spline', step: '' },
         { field: 2, axis: 'H', type: 'spline', step: '' },
         { field: 4, axis: 'V', type: 'line', step: 'left' },
         { field: 5, axis: 'B', type: 'line', step: 'left' }]
