--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             ordinal: false,
             title: {
               text: 'test'
-            }
+            },
           },
           yAxis: [{
             title: {
@@ -259,12 +259,14 @@
             },
             opposite: false,
             id: 'T',
+            allowDecimals: false,
           },
           {
             title: {
               text: 'Humidity %'
             },
-            id: 'H'
+            id: 'H',
+            allowDecimals: false,
           },
           {
             title: {
