--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@
             title: {
               text: 'Humidity %'
             },
+            min: 0,
+            max: 100,
             id: 'H',
             allowDecimals: false,
           },
