--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         { field: 1, axis: 'T', type: 'spline', step: '' },
         { field: 2, axis: 'H', type: 'spline', step: '' },
         { field: 4, axis: 'V', type: 'line', step: 'left' },
-        { field: 5, axis: 'B', type: 'line', step: 'left' }]
+        { field: 5, axis: 'B', type: 'line', step: 'left' },
+        { field: 6, axis: 'A', type: 'line', step: 'left' },]
     });
 
     // user's timezone offset
