--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         { field: 2, axis: 'H', type: 'spline', step: '' },
         { field: 4, axis: 'V', type: 'line', step: 'left' },
         { field: 5, axis: 'B', type: 'line', step: 'left' },
-        { field: 6, axis: 'A', type: 'line', step: 'left' },]
+        { field: 6, axis: 'A', type: 'spline', step: '' },]
     });
 
     // user's timezone offset
