--- a/server/data/index.html
+++ b/server/data/index.html
@@ -149,7 +149,7 @@ C15.093,36.497,14.455,37.135,13.667,37.135z' fill=#3C97D3 />
       </svg>
     </a>
     <span>&nbsp;&nbsp;&nbsp;</span>
-    <a href="https://milanoss.github.io/rekuperace/">
+    <a href="https://milanoss.github.io/rekuperace/index2.html">
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         x="0px" y="0px" width=30px height=30px viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;"
         xml:space="preserve">
