--- a/index2.html
+++ b/index2.html
@@ -21,11 +21,11 @@
     channelKeys.push({
       channelNumber: 886565, name: 'Rekuperace', key: 'V5J2W53P05CO0VP1',
       fieldList: [
-        { field: 1, axis: 'T', type: 'spline', step: '' },
-        { field: 2, axis: 'H', type: 'spline', step: '', dashStyle: 'Dot' },
-        { field: 3, axis: 'V', type: 'line', step: 'left' },
-        { field: 5, axis: 'B', type: 'line', step: 'left'},
-        { field: 4, axis: 'C', type: 'spline', step: '', lineWidth: 3 },]
+        { field: 1, axis: 'T', type: 'spline', step: '', lineWidth: 2 },
+        { field: 2, axis: 'H', type: 'spline', step: '', dashStyle: 'Dot', lineWidth: 2 },
+        { field: 3, axis: 'V', type: 'line', step: 'left', lineWidth: 2 },
+        { field: 5, axis: 'B', type: 'line', step: 'left', lineWidth: 2},
+        { field: 4, axis: 'C', type: 'spline', step: '', lineWidth: 2 },]
     });
 
     // user's timezone offset
