--- a/server/data/index.html
+++ b/server/data/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Weather Station</title>
+  <meta name='version' content='1.1' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' />
   <link rel="stylesheet" href="style.css">
@@ -114,7 +115,7 @@ C15.093,36.497,14.455,37.135,13.667,37.135z' fill=#3C97D3 />
       <div class='side-by-side reading' id="hum_in">-</div>
       <div class='side-by-side reading'>%</div>
     </div>
-    <div class='data humidity'>
+    <div class='data co2'>
       <div class='side-by-side icon'>
         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
