--- a/server/data/index.html
+++ b/server/data/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript">
     var ventilation;
-    var temp_out, hum_out;
-    var temp_in, hum_in;
-    var co2;
+    var temp_out = "-", hum_out = "-";
+    var temp_in = "-", hum_in = "-";
+    var co2 = "-";
     var esp32time;
     function loadValues() {
       var xh = new XMLHttpRequest();
