--- a/server/data/config.html
+++ b/server/data/config.html
@@ -27,7 +27,7 @@
                     }
                 }
             };
-            xh.open("GET", "/api", true);
+            xh.open("GET", window.location.href.substring(0, window.location.href.lastIndexOf("/")) + "/api", true);
             xh.send(null);
         };
         function setValues() {
@@ -53,7 +53,7 @@
                     }
                 }
             };
-            var url = "/api?";
+            var url = window.location.href.substring(0, window.location.href.lastIndexOf("/")) + "/api?";
             for (i = 0; i < 24; i++) {
                 url = url + i + "=" + document.getElementById("ventConfig" + i + "value").innerText + "&";
             }
@@ -71,7 +71,7 @@
                     }
                 }
             };
-            var url = "/api/timereset";
+            var url = window.location.href.substring(0, window.location.href.lastIndexOf("/")) + "/api/timereset";
             xh.open("PUT", url, true);
             xh.send(null);
         }
@@ -80,8 +80,8 @@
 
 <body onload="onBodyLoad()">
     <div class='container'>
-        <button class="btn success" onclick="location.href='/';">Back</button>
-        <button class="btn success" onclick="sendRequest();location.href='/';">Save</button>
+        <button class="btn success" onclick="window.history.back();">Back</button>
+        <button class="btn success" onclick="sendRequest();window.history.back();">Save</button>
         <button class="btn success" onclick="sendTimeResetRequest();">Time</button>
         <div
             style="display: flex; justify-content: space-around; height: 50px; align-items: center; line-height: 34px;">
@@ -244,8 +244,8 @@
                 oninput="ventConfig23value.value=value">
             <output id="ventConfig23value" class="number">-</output>
         </div>
-        <button class="btn success" onclick="location.href='/';">Back</button>
-        <button class="btn success" onclick="sendRequest();location.href='/';">Save</button>
+        <button class="btn success" onclick="window.history.back();">Back</button>
+        <button class="btn success" onclick="sendRequest();window.history.back();">Save</button>
         <div class="time"><span id="esp32time" /></div>
         <div class="time"><span id="nextStart" /></div>
         <div class="time"><span id="nextStop" /></div>
