--- a/server/data/log.html
+++ b/server/data/log.html
@@ -15,7 +15,7 @@
                     }
                 }
             };
-            xh.open("GET", "/log", true);
+            xh.open("GET", window.location.href.substring(0, window.location.href.lastIndexOf("/")) + "/log", true);
             xh.send(null);
         };
         function setValues() {
